--- a/templates/activity.ejs
+++ b/templates/activity.ejs
@@ -1,3 +1,8 @@
+package <%= path %>;
+
+import android.app.Activity;
+import android.os.Bundle;
+
 public class <%= name %>Activity extends Activity {
 
 	<%= name %>View view;
